--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Basic statistics for OC Mall Plugin",
     "type": "october-plugin",
     "require": {
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0",
+        "offline/oc-mall-plugin": "^1.1.0"
     },
     "license": "MIT",
     "authors": [
