Update composer name to make the plugin public

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -4,3 +4,5 @@
     - Adding Best Sellers Stats.
 1.0.3:
     - Adding Sales by month.
+1.0.4:
+    - Update composer name to make the plugin public
