Update composer name to make the plugin public

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -6,3 +6,5 @@
     - Adding Sales by month.
 1.0.4:
     - Update composer name to make the plugin public
+1.0.5:
+    - Update composer name to make the plugin public
