Adding average sales, total payee

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -8,3 +8,5 @@
     - Update composer name to make the plugin public
 1.0.5:
     - Update composer name to make the plugin public
+1.0.6:
+    - Adding average sales, total payee
