--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -20,3 +20,7 @@
     - Adding low sellers; few style enhancements for the bar chart
 1.0.11:
     - Adding export features for customers, orders and sales
+1.0.12:
+    - Adding discount name in the Orders export
+1.0.13:
+    - Added products import feature
